fixed spacing

--- a/src/components/ContactMe/ContactMe.module.scss
+++ b/src/components/ContactMe/ContactMe.module.scss
@@ -10,6 +10,11 @@
         justify-content: center;
         gap: 2rem;
     }
+    span {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
 }
 
 .body {
